ghetto fix for student header

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,10 +15,9 @@ body{
   text-align: center;
   margin: 0px;
 
-  div {
+  h2 {
     float:none !important;
     margin: 0px !important;
-
   }
 }
 
