--- a/app/views/layouts/_student_header.html.erb
+++ b/app/views/layouts/_student_header.html.erb
@@ -2,7 +2,7 @@
 		<nav class="navbar navbar-inverse">
 	  <div class="container">
 	    <div class="navbar-header navbar-center-fix">
-	      <div class="navbar-brand">Film Streams Student Night</div>
+	      <h2 class="navbar-text">Film Streams Student Night</h2>
 	    </div>
 	  </div>
 	</nav>
