--- a/app/views/statistics/by_date.erb
+++ b/app/views/statistics/by_date.erb
@@ -56,7 +56,7 @@
 					<tr>
 						<th>Schools</th>
 						<th>Attends</th>
-						<th>Avg</th>
+						<th class="text-center">%</th>
 					</tr>
 				</thead>
 				<tbody>
