--- a/app/views/statistics/by_date.erb
+++ b/app/views/statistics/by_date.erb
@@ -47,7 +47,11 @@
 						</tr>
 					<% end %>
 				</tbody>
-			</table> 
+			</table>
+			<ul class="pagination">
+			</ul>			
+
+
 		</div>
 	  <div class="col-sm-4">
 	  	<h4>Schools</h4>
@@ -69,6 +73,8 @@
 						<% end %>
 				</tbody>
 			</table>
+			<ul class="pagination">
+			</ul>	
 	  </div>
 	</div>
 </div>
