--- a/app/views/statistics/by_date.erb
+++ b/app/views/statistics/by_date.erb
@@ -31,7 +31,8 @@
 	<div class="row">
 		<div class="col-sm-6">
 			<h4>Students</h4>
-			<table class="table table-bordered">
+
+			<table class="j_page_table table table-bordered">
 				<thead>
 					<tr>
 						<th>Student</th>
@@ -41,7 +42,7 @@
 				<tbody>
 
 					<%  @students.each do |student, num| %>
-						<tr>
+						<tr class=student_row>
 							<td><a href="/statistics/student/<%=student[2]%>"><%= student[1] %></a></td>
 							<td><%= num %></td>
 						</tr>
@@ -49,16 +50,17 @@
 				</tbody>
 			</table>
 			
-			<ul class="pagination">
+			<ul class="j_pagination">
 			</ul>			
 
 
 		</div>
 	  <div class="col-sm-6">
 	  	<h4>Schools</h4>
-			<table class="table table-bordered">
+
+			<table class="j_page_table table table-bordered">
 				<thead>
-					<tr>
+					<tr class=school_row>
 						<th>Schools</th>
 						<th>Attends</th>
 						<th class="text-center">%</th>
@@ -75,7 +77,7 @@
 				</tbody>
 			</table>
 
-			<ul class="pagination">
+			<ul class="j_pagination">
 			</ul>	
 
 	  </div>
