removed double effect

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -267,3 +267,12 @@ img.bg {
   border-top: solid 2px;
   border-color: gray;
 }
+
+/* ---- pagination helper ---- */
+
+.p-active{
+  color: #23527c;
+  background-color: #eee;
+  border-color: #ddd;
+}
+    
