--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -271,8 +271,9 @@ img.bg {
 /* ---- pagination helper ---- */
 
 .p-active{
-  color: #23527c;
-  background-color: #eee;
-  border-color: #ddd;
+    z-index: 2 !important;
+    color: #23527c !important;
+    background-color: #eeeeee !important;
+    border-color: #ddd !important;
 }
     
