added a button on the event/index page that would link to an edit student page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -39,4 +39,10 @@
 		</tbody>
 		
 	</table>
+	<a href="#" class="btn custom-btn borderless">
+	  	Edit Students<span class="glyphicon glyphicon-view"></span>
+	</a>
 </div>
+
+
+
