--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@event, @student]) do |f| %>
+<%= form_for([@event, @student, @referral]) do |f| %>
 
   <%= f.hidden_field :email, class: 'form-control' %>
 
@@ -25,7 +25,7 @@
 
   <div class="form-group">
     <%= f.label :referral, 'How did you hear about us?' %>
-    <%= f.select( :referral, Student.referrals.map { |key, value| [key, key] }, 
+    <%= f.select( :referral, Referral.referral_types.map { |key, value| [key, key] }, 
     {include_blank: "How did you hear about free movie night?"},{ :class => 'form-control' })%>
   </div>
 
