Added Events return from Past view

--- a/app/views/events/past.html.erb
+++ b/app/views/events/past.html.erb
@@ -1,7 +1,6 @@
 <div class="container p-rel">
 	<h1 class = "text-center">Past Events</h1>
 	<hr>
-
 	<table class="table">
 		<thead>
 			<tr>
@@ -35,4 +34,6 @@
 			
 		</tbody>
 	</table>
+	<a href="../events" class="btn custom-btn borderless">
+	Return to Upcoming Events<span class="glyphicon glyphicon-view"></span></a>
 </div>
