Just commenting a bit of the plan

--- a/app/views/edit_students/edit.html.erb
+++ b/app/views/edit_students/edit.html.erb
@@ -1,1 +1,18 @@
-<%= render 'form' %>
+<!-- Purpose of this page is to edit a given student's info. -->
+
+<!-- 
+  Form for Student #3...
+
+  With fields for that student's
+  - Name
+  - Email
+  - School
+  - TODO: Referrals
+ -->
+
+<!-- 
+  When this form is submitted, save the form data (obviously), and redirect
+  back to the list of all students.
+ -->
+
+ 
