--- a/app/views/edit_students/edit.html.erb
+++ b/app/views/edit_students/edit.html.erb
@@ -33,7 +33,7 @@
   </div>
 
   <div>
-    <%= f.label "school" %>
+    <%= f.label "school_id" %>
 
     <%= f.select "school_id", options_from_collection_for_select(School.all, :id, :name, selected: @student.school_id) %>
   </div>
