--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@event, @student, @referral]) do |f| %>
+<%= form_for([@event, @student]) do |f| %>
 
   <%= f.hidden_field :email, class: 'form-control' %>
 
@@ -24,9 +24,15 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :referral, 'How did you hear about us?' %>
-    <%= f.select( :referral, Referral.referral_types.map { |key, value| [key, key] }, 
-    {include_blank: "How did you hear about free movie night?"},{ :class => 'form-control' })%>
+
+    <%= f.label :referrals, 'How did you hear about us?' %>
+
+    <% Referral.referral_types.each do |referral| %>
+      <div>
+        <%= referral[0] %>
+        <input type="checkbox" name="referrals[]" value="<%= referral[1] %>">
+      </div>
+    <% end %>
   </div>
 
   <div class="form-group">
