--- a/app/views/edit_students/index.html.erb
+++ b/app/views/edit_students/index.html.erb
@@ -38,7 +38,7 @@
 							<%= student.email %>
 						</td>
 						<td>
-							<a href="#" class="btn custom-btn borderless">
+							<a href="merge/edit?id=<%= student.id %>" class="btn custom-btn borderless">
 								Edit <span class="glyphicon glyphicon-edit"></span>
 						  </a>
 						</td>
