--- a/app/views/edit_students/index.html.erb
+++ b/app/views/edit_students/index.html.erb
@@ -1,17 +1,28 @@
 <div>
 	<div class = "studentsEditing table">
-		<thead>
+		<h2>Search for student area. If your search yields nothing, try typing part of the name</h2>
+		<%= form_for "findingStudents" do |f| %>
+		<div>
+			<%= f.label "name" %>
+    		<%= f.text_field "name" %>
+		</div>
+		
+		<input type="submit">		
+
+		<% end %>
+
+		<!-- <thead>
 			<tr>
-				<th>These are the students you would like to Merge --- </th>
+				<th></th>
 				<th>First student -- </th>
 				<th>Second Student --</th>
 				<th>
 					<a href="merge/edit" class="btn custom-btn borderless"> Submit Merge <span class="glyphicon glyphicon-edit"></span>
 					</a>
 				</th>
-		</thead>
+		</thead> -->
 	</div>
-	<table class="table">
+	<!-- <table class="table">
 		<thead>
 			<tr>
 				<th>
@@ -53,5 +64,5 @@
 			
 		</tbody>
 		
-	</table>
+	</table> -->
 </div>
