--- a/app/views/edit_students/index.html.erb
+++ b/app/views/edit_students/index.html.erb
@@ -1,16 +1,19 @@
-<div>
-	<div class = "studentsEditing table">
-		<h2>Search for student area. If your search yields nothing, try typing part of the name</h2>
-		<%= form_for "findingStudents" do |f| %>
-		<div>
-			<%= f.label "name" %>
-    		<%= f.text_field "name" %>
-		</div>
-		
-		<input type="submit">	
-
-		<% end %>
-
+<div class="container">
+	<div class="container bottom_space">
+	  <div class="row">
+	    <div class="col-md-6 col-md-offset-3">
+	    	<h1 class="text-center">Search for student area.</h1>
+	      	<h2 class="text-center">If your search yields nothing try typing part of the name</h2>
+   			<%= form_for "findingStudents" do |f| %>
+	      		<div>
+	      			<%= f.label "name" %>
+	      	   		<%= f.text_field "name"%>
+	      		</div>
+	      		<input type="submit" class= "btn custom-btn col-xs-4 col-xs-offset-4">	
+      		<% end %>
+	  </div>
+	</div>
+</div>
 		<!-- <thead>
 			<tr>
 				<th></th>
