--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
 				<% if !session[:user_id].nil? %>
 				  <li><a href="/events" >Upcoming Events</a></li>
 					<li><a href="/events/new" >New Event</a></li>
-					<li><a href="/merge"> Edit Students</a></li>
+					<li><a href="/edit_students"> Edit Students</a></li>
 				  <li><a href="/statistics" >Stats</a></li>
 					<li><a href="/logout">Logout</a></li>
 				<% else  %>
