Added functions to simplify controllers

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -56,7 +56,7 @@
 			</tr>			
 		</thead>
 		<tbody>
-			<% @past_events[0...9].each do |event| %>
+			<% @recent_events.each do |event| %>
 				<tr>
 					<td>
 						<%= (Time.parse(event.date.to_s).strftime('%a, %b %d, %Y ')) %>
