--- a/app/views/edit_students/index.html.erb
+++ b/app/views/edit_students/index.html.erb
@@ -5,9 +5,9 @@
 	    	<h1 class="text-center">Search for student area.</h1>
 	      	<h2 class="text-center">If your search yields nothing try typing part of the name</h2>
    			<%= form_for "findingStudents" do |f| %>
-	      		<div>
+	      		<div class= "form-group">
 	      			<%= f.label "name" %>
-	      	   		<%= f.text_field "name"%>
+	      	   		<%= f.text_field "name", class: "form-control"%>
 	      		</div>
 	      		<input type="submit" class= "btn custom-btn col-xs-4 col-xs-offset-4">	
       		<% end %>
