--- a/app/views/events/past.html.erb
+++ b/app/views/events/past.html.erb
@@ -19,7 +19,7 @@
 			<% @past_events.each do |event| %>
 				<tr>
 					<td>
-						<%= (Time.parse(event.date.to_s).strftime('%a, %b %d, %Y ')) %>
+						<%= event_date(event) %>
 					</td>
 					<td>
 						<%= event.title %>
