cleanup index.html

--- a/app/views/edit_students/show.html.erb
+++ b/app/views/edit_students/show.html.erb
@@ -11,10 +11,10 @@
 					Email
 				</th>
 				<th>
-					
+					<!-- placeholder for edit -->
 				</th>
 				<th>
-
+					<!-- placeholder for delete -->
 				</th>
 			</tr>			
 		</thead>
