--- a/app/views/edit_students/index.html.erb
+++ b/app/views/edit_students/index.html.erb
@@ -4,13 +4,15 @@
 	    	<div class="col-md-6 col-md-offset-3">
 	    		<h1 class="text-center">Search for student area.</h1>
 	      		<h2 class="text-center">If your search yields nothing try typing part of the name</h2>
-   				<%= form_for "findingStudents" do |f| %>
-	      			<div class= "form-group">
-		      			<%= f.label "name" %>
-		      	   		<%= f.text_field "name", class: "form-control"%>
-	      			</div>
-	      			<input type="submit" class= "btn custom-btn col-xs-4 col-xs-offset-4">	
-      			<% end %>
+	      		<div>
+	   				<%= form_for "findingStudents" do |f| %>
+		      			<div class= "form-group">
+			      			<%= f.label "name" %>
+			      	   		<%= f.text_field "name", class: "form-control"%>
+		      			</div>
+		      			<input type="submit" class= "btn custom-btn col-xs-4 col-xs-offset-4">
+	      			<% end %>
+      			</div>
 	  		</div>
 		</div>
 	</div>
