--- a/app/views/edit_students/show.html.erb
+++ b/app/views/edit_students/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container p-rel">
-	<h1 class = "text-center">Here are the results that were found for<%= @findStudent %></h1>
+	<h1 class = "text-center">Here are the results that were found for <%= @findStudent %></h1>
 	<div class = "text-center"><a href="/edit_students">Go Back To Search</a></div>
 	<table class="table">
 		<thead>
@@ -29,12 +29,10 @@
 							<%= student.email%>
 						</td>
 						<td>
-							<a href="edit_students/edit?id=<%= student.id %>" class="btn custom-btn borderless">
-								Edit <span class="glyphicon glyphicon-edit"></span>
-						  </a>
+							<a href="edit_students/edit?id=<%= student.id %>" class="btn custom-btn borderless"> Edit <span class="glyphicon glyphicon-edit"></span></a>
 						</td>
 						<td>
-							<a href="edit_students/destroy?id=<%= student.id %>" class= "btn custom-btn-dngr navbar-btn"> Delete</a>
+							<%= button_to 'Delete Student', edit_students_path(@student), class: 'btn custom-btn-dngr navbar-btn', data: {:confirm => 'Are you sure? This will delete the student'}, :method => :delete %>
 						</td>
 					</tr>
 				<% end %>
