--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -8,7 +8,7 @@
       
       <%= render 'layouts/student_errors' %>
 
-      <%= render 'form' %>
+      <%= render 'formnew' %>
     </div>
   </div>
 </div>
