--- a/app/views/admin_students/edit.html.erb
+++ b/app/views/admin_students/edit.html.erb
@@ -5,7 +5,7 @@
       <div class="col-md-6 col-md-offset-3">
         <h1 class = "text-center">Edit Student</h1>
         <!-- <div class = "text-center"> -->
-          <%= form_for "student", {url: "/edit_students/save?id=#{@student.id}"} do |f| %>
+          <%= form_for "student", url: "/admin_students/#{@student.id}", method: 'patch' do |f| %>
 
             <div class="form-group">
               <%= f.label "name" %>
@@ -38,7 +38,7 @@
               <%= f.text_field "email_confirmation", class: "form-control", value: @student.email %>
             </div>
             <div class = "text-center">
-              <input type="submit" class = "btn custom-btn navbar-btn">
+              <%= f.submit type="Update Student", class: "btn custom-btn navbar-btn"%>
             </div>
           <% end %>
         </div>
