--- a/app/views/statistics/student.erb
+++ b/app/views/statistics/student.erb
@@ -35,7 +35,6 @@
 		<tbody>
 			<tr>
 				<td><%= @student.attendances.count %></td>
-				<td><%= @student.referral %></td>
 			</tr>
 		</tbody>
 	</table>
@@ -61,8 +60,11 @@
 			<% end %>
 		</tbody>
 	</table>
-
-
+	<h3>Referral Sources</h3>
+	<ul>
+	<% @student.referrals.each do |referral| %>
+		<li><%= referral.referral_type %></li>
+	<% end %>
+	<ul>
 
 </div>
-
