--- a/app/views/statistics/student.erb
+++ b/app/views/statistics/student.erb
@@ -29,12 +29,17 @@
 		<thead>
 			<tr>
 				<th>Attendances</th>
-				<th>Referral</th>
+				<th>Referral Sources</th>
 			</tr>
 		</thead>
 		<tbody>
 			<tr>
 				<td><%= @student.attendances.count %></td>
+				<td>
+					<% @student.referrals.each do |referral| %> 
+						<%=  referral.referral_type + ", " %> 
+					<% end %>
+				</td>
 			</tr>
 		</tbody>
 	</table>
@@ -60,12 +65,4 @@
 			<% end %>
 		</tbody>
 	</table>
-	<h3>Referral Sources</h3>
-	<ul>
-	<li>
-	<% @student.referrals.each do |referral| %>
-		<%= referral.referral_type %>,</li>
-	<% end %>
-	<ul>
-
 </div>
