Finished new event location, adding location to event index

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,7 +12,7 @@
 					Title
 				</th>
 				<th>
-					
+					Location
 				</th>
 			</tr>			
 		</thead>
@@ -24,6 +24,9 @@
 					</td>
 					<td>
 						<%= event.title %>
+					</td>
+					<td>
+						<%= event.location %>
 					</td>
 					<td>
 						<a href="events/<%= event.id %>" class="btn custom-btn borderless">
