--- a/app/views/merge_students/show.html.erb
+++ b/app/views/merge_students/show.html.erb
@@ -67,4 +67,5 @@
 				</tr>
 		</tbody>
 	</table>
+	<a href="/merge_students/<%= @student2.id%>/edit?attend=<%= @student1.id%>" class="btn custom-btn borderless"> Merge? <span class="glyphicon glyphicon-edit"></span></a>
 </div>
