Refactored method to generate Location list, Refined Location listing on index

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -26,7 +26,7 @@
 						<%= event.title %>
 					</td>
 					<td>
-						<%= event.location %>
+						<%= event_location(event) %>
 					</td>
 					<td>
 						<a href="events/<%= event.id %>" class="btn custom-btn borderless">
