I think it destroys the old students too...

--- a/app/views/merge_students/show.html.erb
+++ b/app/views/merge_students/show.html.erb
@@ -67,5 +67,7 @@
 				</tr>
 		</tbody>
 	</table>
-	<a href="/merge_students/<%= @student2.id%>/edit?attend=<%= @student1.id%>" class="btn custom-btn borderless"> Merge? <span class="glyphicon glyphicon-edit"></span></a>
+	<div class="text-center">
+		<a href="/merge_students/<%= @student2.id%>/edit?attend=<%= @student1.id%>" class="btn custom-btn borderless"> Merge? <span class="glyphicon glyphicon-edit"></span></a>
+	</div>
 </div>
