--- a/app/views/merge_students/edit.html.erb
+++ b/app/views/merge_students/edit.html.erb
@@ -1,13 +1,24 @@
 <div class="container p-rel">
-	<div>
-		<%= @student2.id %>
+	<h1 class = "text-center">Merged Student</h1>
+	<h2 class = "text-center">Here is the result of your merge!</h2>
+	<table class = "table">
+		<thead>
+			<tr>
+				<th>Name</th>
+				<th>School</th>
+				<th>Attendances</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><%=@student2.name%></td>
+				<td><%=@student2.school.name%></td>
+				<td><%=@student2.attendances.count%></td>
+			</tr>
+		</tbody>
+	</table>
+	<div class = "text-center">
+		<p>Click the button to finish the merge by deleting the old student information</p>
+		<%= button_to('Destroy', "/merge_students/#{@student1.id}", class: 'btn custom-btn-dngr navbar-btn', method: "delete", data: { confirm: 'Are you sure?', disable_with: 'loading...' }) %>
 	</div>
-	<div>
-		<%= @student2.name %>
-	</div>
-	<div>
-		<%= @student2.attendances.count %>
-	</div>
-
-	
 </div>
