Added edit event functionality, fixed typo

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,6 +13,9 @@
 	        <%= f.label :date %>
 	        <%= f.date_field :date, class: 'form-control' %>
 
+	        <%= f.label :location %>
+         	<%= f.select :location, options_for_select([[Event.location_name_list[0], :ruth_sokolof], [Event.location_name_list[1], :dundee]]), class: 'form-control' %>
+
 	        <%= f.submit "Update Event", class: "btn custom-btn navbar-btn" %>
 
 	        <a class="btn custom-btn navbar-btn pull-right" href="/events/<%=@event.id%>/checkins/new" role="button">Go To Student Check-In  <span class="glyphicon glyphicon-share"></span></a>
